# polly

./: CMakeLists.txt  Makefile  Makefile.config.in  Makefile.tools.rules  configure
autoconf/: aclocal.m4  configure.ac
autoconf/autom4te.cache/: output.1  requests  traces.0  traces.1
autoconf/m4/: find_lib_and_headers.m4
cmake/: FindCloog.cmake  FindIsl.cmake  FindScoplib.cmake
include/polly/: CLooG.h  CLooGExporter.h  CMakeLists.txt  ClastParser.h  Cloog.h  CodeGeneration.h  Dependences.h  IndependentBlocks.h  LinkAllPasses.h  PollyType.h  SCEVAffFunc.h  SCoP.h  SCoPCondition.h  SCoPDetection.h  SCoPExchange.h  SCoPInfo.h  SCoPPass.h  ScalarDataRef.h  ScopDetection.h  ScopInfo.h  ScopLib.h  ScopPass.h  TempSCoPInfo.h  TempScopInfo.h  config.h.cmake  json.h
include/polly/Config/: config.h.in
include/polly/SCoP/: SCoPInfo.h
include/polly/Support/: AffineSCEVIterator.h  BasicBlockEdge.h  GICHelper.h  GmpConv.h  IRHelper.h  SCoPHelper.h
lib/: CLooG.cpp  CMakeLists.txt  ClastCodeGeneration.cpp  ClastParser.cpp  ClastPrinter.cpp  Cloog.cpp  CodeGen.cpp  CodeGeneration.cpp  CodePreparation.cpp  Dependences.cpp  IndependentBlocks.cpp  Interchange.cpp  Makefile  Pocc.cpp  RegionSimplify.cpp  SCoPCodePrep.cpp  SCoPCondition.cpp  SCoPDOT.cpp  SCoPDetection.cpp  SCoPDetection.h  SCoPGraphPrinter.cpp  SCoPInfo.cpp  SCoPPass.cpp  SCoPPrinter.cpp  ScalarDataRef.cpp  ScopDetection.cpp  ScopGraphPrinter.cpp  ScopInfo.cpp  ScopPass.cpp  TempSCoPInfo.cpp  TempScopInfo.cpp  json.c  json_helper.c
lib/Analysis/: ScopDetection.cpp
lib/Exchange/: CMakeLists.txt  JSONExporter.cpp  OpenSCoPExporter.cpp  OpenSCoPImporter.cpp  OpenScopExporter.cpp  OpenScopImporter.cpp  SCoPExporter.cpp  SCoPImporter.cpp  SCoPLibExporter.cpp  SCoPLibImporter.cpp  ScopLib.cpp  ScopLibExporter.cpp  ScopLibImporter.cpp
lib/Polly/: CLooG.cpp  CMakeLists.txt  CodeGen.cpp  PollyPass.cpp  SCoP.cpp  SCoPDetection.cpp  SCoPInfo.cpp  SCoPPass.cpp
lib/SCoP/: CMakeLists.txt  SCoPInfo.cpp
lib/Support/: AffSCEVItTester.cpp  GICHelper.cpp  GmpConv.cpp  IRHelper.cpp  SCoPHelper.cpp  ScopHelper.cpp
lib/polly/: CMakeLists.txt
lib/sample/: CMakeLists.txt
test/: CMakeLists.txt  create_ll.sh  lit.site.cfg.in  polly.ll  region.ll
test/AffineIterator/: loop_static_bound.ll  no_tagetdata.ll  no_tagetdata_loop.ll  simple_0.ll  simple_1.ll  simple_loop.ll  simple_nest.ll
test/CodeGen/: 20100617.ll  20100622.ll  20100707.ll  20100707_2.ll  20100708.ll  20100708_2.ll  20100713.ll  20100713_2.ll  20100717.ll  20100718-DomInfo-2.ll  20100718-DomInfo.ll  20100720-MultipleConditions.ll  20100809-IndependentBlock.ll  20100811-ScalarDependencyBetweenBrAndCnd.ll  20101030-Overflow.ll  20101103-Overflow3.ll  20101103-signmissmatch.ll  20110226-Ignore-Dead-Code.ll  20110226-PHI-Node-removed.ll  PHIInExit.ll  README  constant_condition.ll  create_ll.sh  do_pluto_matmult.ll  do_pluto_matmult___%do.body---%do.end45.scop  do_pluto_matmult___%do.body---%do.end45.scop.invalid_reverse  do_pluto_matmult___%do.body---%do.end45.scop.valid_reverse  loop_with_condition.ll  loop_with_condition_2.ll  loop_with_condition_ineq.ll  loop_with_condition_nested.ll  matmul_vec.ll  matmul_vec___%1---%17.scop  pluto-matmul.ll  pluto_matmult.ll  pluto_matmult___%for.cond---%for.end47.scop  pluto_matmult___for.cond---for.end47.scop  reduction.ll  reduction_2.c  reduction_2.ll  (+30 more)
test/CodeGen/OpenMP/: add_memref.ll  extract_memref.ll  invalidate_subfn_scops.ll  parallel_loop.ll  parallel_loop_simple.ll  parallel_loop_simple2.ll  simple_nested_loop.ll  structnames.ll  two_loop.ll
test/LoopBound/: bad_loop_0.ll  bad_loop_1.ll  cast.ll  cond_in_loop.ll  indvar_out_of_loop.ll  indvar_out_of_loop_1.ll  indvar_out_of_loop_2.ll  loop_affine_bound_0.ll  loop_affine_bound_1.ll  loop_affine_bound_2.ll  loop_complex_parameter.ll  loop_depth_0.ll  nest_loop_0.ll  out_of_loop_0.ll  simple_loop_0.ll  simple_loop_1.ll  static_known_0.ll
test/Polly/: polly.ll
test/Polly/CodeGen/: fft2.ll  noloop.ll  pluto-matmul.c  pluto-matmul.ll  test.c  test.ll
test/Polly/SCoPDetection/: .matmul.ll.swp  matmul.c  matmul.ll  test.c
test/SCoPCondition/: 1.ll  loop_0.ll  path_into_sub_dom.ll  path_into_sub_dom_1.ll
test/SCoPDetection/: test.s
test/SCoPInfo/: 2010-8-14.ll  bad_loop_0.ll  bad_loop_1.ll  bug_2010_07_16.ll  bug_scev_not_fully_eval.ll  cast.ll  cond_in_loop.ll  indvar_out_of_loop.ll  indvar_out_of_loop_1.ll  indvar_out_of_loop_2.ll  indvar_out_of_loop_3.ll  loop_affine_bound_0.ll  loop_affine_bound_1.ll  loop_affine_bound_2.ll  loop_carry.ll  loop_complex_parameter.ll  loop_depth_0.ll  loop_multi_exits.ll  nest_loop_0.ll  out_of_loop_0.ll  phi_not_grouped_at_top.ll  phi_with_invoke_edge.ll  simple_loop1.ll  simple_loop2.ll  simple_loop_0.ll  simple_loop_1.ll  static_known_0.ll  sum.ll  undef_in_cond.ll
test/ScalarDataRef/: loop_carry.ll  sum.ll
test/ScopInfo/: Alias-0.ll  Alias-1.ll  Alias-2.ll  Alias-3.ll  Alias-4.ll  bad_loop_0.ll  bad_loop_1.ll  bug_2010_07_16.ll  bug_2010_10_22.ll  bug_2011_1_5.ll  bug_scev_not_fully_eval.ll  cast.ll  cond_in_loop.ll  indvar_out_of_loop.ll  indvar_out_of_loop_1.ll  indvar_out_of_loop_2.ll  indvar_out_of_loop_3.ll  loop_affine_bound_0.ll  loop_affine_bound_1.ll  loop_affine_bound_2.ll  loop_carry.ll  loop_complex_parameter.ll  loop_depth_0.ll  loop_multi_exits.ll  nest_loop_0.ll  out_of_loop_0.ll  simple_loop_0.ll  simple_loop_1.ll  static_known_0.ll  sum.ll  undef_in_cond.ll
test/TempScop/: reduction-add.ll  reduction-with-added-immediate.ll
test/polybench/datamining/correlation/: correlation_with_param.ll  correlation_without_param.ll
test/polybench/datamining/covariance/: covariance_with_param.ll  covariance_without_param.ll
test/polybench/stencils/adi/: adi_with_param.ll  adi_without_param.ll
test/polybench/stencils/jacobi-2d-imper/: jacobi-2d-imper_with_param.ll  jacobi-2d-imper_without_param.ll
test/polybench/stencils/seidel/: seidel_with_param.ll  (+1 more)
tools/: CMakeLists.txt  Makefile
tools/popt/: CMakeLists.txt  polly_opt.cpp  readme.txt
utils/: pollycc
utils/pyscop/: isl.py  pyscop.py
(+58 files in other folders)
